--- a/composer.json
+++ b/composer.json
@@ -15,15 +15,19 @@
         "source": "https://github.com/jasny/dotkey"
     },
     "require": {
-        "php": ">=5.4.0"
+        "php": ">=7.4.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "^4.8",
-        "satooshi/php-coveralls": "^0.6.1"
+        "jasny/php-code-quality": "2.6.*"
     },
     "autoload": {
         "psr-4": {
-            "Jasny\\": "src/"
+            "Jasny\\DotKey\\": "src/"
+        }
+    },
+    "autoload-dev": {
+        "psr-4": {
+            "Jasny\\DotKey\\Tests\\": "tests/"
         }
     }
 }
