--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -8,20 +8,17 @@
     convertWarningsToExceptions="true"
 >
     <testsuites>
-        <testsuite name="DotKey">
+        <testsuite name="tests">
             <directory>tests/</directory>
         </testsuite>
     </testsuites>
     <filter>
-        <blacklist>
-            <directory suffix=".php">vendor</directory>
-        </blacklist>
         <whitelist processUncoveredFilesFromWhitelist="true">
             <directory suffix=".php">src</directory>
-        </whitelist>        
+        </whitelist>
     </filter>
     <logging>
-        <log type="coverage-text" target="php://stdout"/>
-        <log type="coverage-clover" target="build/logs/clover.xml"/>
+        <log type="coverage-text" target="php://stdout" showUncoveredFiles="true" />
     </logging>    
 </phpunit>
+
