Added `DotKey::onCopy()` This method copies the subject and leaves the original unchanged. Objects will be cloned for the copy, but only if they're modified.

--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "jasny/dotkey",
-    "description": "Access objects and arrays through dot notation",
+    "description": "Dot notation access for objects and arrays",
     "keywords": ["json", "object", "array", "query"],
     "license": "MIT",
     "authors": [
