--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,7 @@
     },
     "require-dev": {
         "phpstan/phpstan": "^1.12",
-        "phpunit/phpunit": "^11.3",
+        "phpunit/phpunit": ">= 10.5, < 12",
         "squizlabs/php_codesniffer": "^3.10"
     },
     "autoload": {
